--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -16,18 +16,16 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - name: Set up uv
+      uses: astral-sh/setup-uv@v3
       with:
-        python-version: "3.11"
+        version: "latest"
 
-    - name: Install build dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build
+    - name: Set up Python
+      run: uv python install 3.11
 
     - name: Build package
-      run: python -m build
+      run: uv build
 
     - name: Store distribution packages
       uses: actions/upload-artifact@v4
